--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "smartpsykologi",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,16 +9,16 @@
   },
   "dependencies": {
     "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@types/node": "^22.13.14",
+    "@types/react": "^19.0.12",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.17"
+    "prettier": "^3.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.2"
   }
 }
