--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.6.2",
     "next": "15.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
     "@types/node": "^22.13.14",
