--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "smartpsykologi",
   "version": "0.1.0",
+  "type": "commonjs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,18 +10,17 @@
   },
   "dependencies": {
     "framer-motion": "^12.6.2",
-    "next": "15.2.4",
+    "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
-    "@types/node": "^22.13.14",
-    "@types/react": "^19.0.12",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.2"
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
